--- a/public/index.ssr.html
+++ b/public/index.ssr.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-hackernews-starter</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="/favicon/favicon.ico">
+    <title>vue-cli-3-ssr-template</title>
   </head>
     <body>
     <!--vue-ssr-outlet-->
